--- a/marge_conflict.html
+++ b/marge_conflict.html
@@ -3,5 +3,4 @@
 <h2>ESPERO QUE SALGA BIEN</h2>
 <h3><P>Ahora asjunto una imagen to guapa</P></h3>
 <img src="https://es.web.img3.acsta.net/pictures/17/01/20/12/42/192403.jpg" alt="200">
-<p>Te gusta?</p>
-<p>Pues es mi prima pequeña pervertido</p>
+<p>Te gustan
